# td_lib-snapshots

./: CHANGES  COPYING  MANIFEST  MANIFEST.new  Makefile  README  VERSION  acconfig.h  aclocal.m4  config_h.in  configure  configure.in  descrip.mms  makefile.in  mkdirs.sh  patchlevel.h  td_make.in
certify/: Makefile  README  config.txt  release.txt  reusable.txt
include/: .vilerc  Makefile  acl.h  cmdch.h  cmv_defs.h  config.hin  deltree.h  dyn_str.h  headers  llib-ltd  makefile.in  port2vms.h  ptypes.h  rcsdefs.h  sccsdefs.h  td_btree.h  td_curse.h  td_ext.h  td_lib.h  td_local.h  td_qsort.h  td_regex.h  td_scomp.h  td_sheet.h  vms_dirs.h
package/: td_lib.spec
package/debian/: changelog  control  copyright  rules  watch
src/: Makefile  descrip.mms  makefile.end  makefile.in  sub_vars.in  td_defns.mk  td_defns.mms  td_rules.mk  td_rules.mms
src/cm_funcs/: Makefile  cmv_dir.c  cmv_last.c  cutoff.c  cvslast.c  descrip.mms  lastrev.c  makefile.in  modules  newzone.c  next_ver.c  packdate.c  rcs_dir.c  rcsargpr.c  rcsdebug.c  rcsedit.c  rcskeys.c  rcslast.c  rcsload.c  rcslocks.c  rcsname.c  rcspath.c  rcsperm.c  rcssymbs.c  rcstemp.c  rcstime.c  samebr.c  sccs_dir.c  sccsargv.c  sccsdbug.c  sccslast.c  sccsname.c  sccspath.c  svn_last.c  vcs_file.c  vercmp.c
src/compare/: Makefile  btree.c  cmpqsort.c  descrip.mms  diffload.c  m2comp.c  modules  scomp.c
src/curses/: Makefile  addchnst.c  beep.c  bindkeys.c  blip.c  cmdch.c  descrip.mms  dumpchr.c  dumptty.c  dumpwin.c  erasechr.c  getmaxx.c  is_xterm.c  keycode.c  killchar.c  lnextchr.c  logch.c  modules  on_winch.c  padedit.c  rawgets.c  rawterm.c  resizwin.c  savewin.c  scr_size.c  valid_ch.c  viewfile.c  win2file.c  wrepaint.c  wresize.c
src/memory/: Makefile  descrip.mms  doalloc.c  memmove.c  modules  stralloc.c  txtalloc.c  vecalloc.c  vecedit.c  veclen.c
src/pathname/: Makefile  abspath.c  acc_mode.c  add2fnam.c  arg2file.c  copyback.c  denode.c  descrip.mms  dlettree.c  dotname.c  editfile.c  edittree.c  file2arg.c  file2mem.c  fileblox.c  filecopy.c  filesize.c  fleaf.c  fleaf14.c  fp2argv.c  ftype.c  ftype2.c  is_spath.c  istextfl.c  mem2file.c  modechar.c  modules  name2s.c  pathcat.c  pathcmp.c  pathhead.c  pathleaf.c  relpath.c  samehead.c  sameleaf.c  stat_dir.c  stat_fil.c  track_wd.c  trimpath.c  trnstree.c  (+2 more)
src/port2dos/: Makefile
src/port2vms/: Makefile  descrip.mms  dir2path.c  modules  name2vms.c  path2dir.c  path2vms.c  rmsio.c  time2vms.c  uid2s.c  utimes.c  vms2name.c  vms_dirs.c  vms_pthc.c  vms_rpth.c  vms_wild.c  zone2vms.c
src/process/: Makefile  bldarg.c  catarg.c  catchall.c  descrip.mms  egress.c  execute.c  failed.c  for_admn.c  for_user.c  gethome.c  getopt.c  getuser.c  in_group.c  interact.c  makeargv.c  modules  revert.c  savesuid.c  shoarg.c  showargv.c  showuids.c  usercopy.c  userprot.c  walkback.c
src/sheet/: Makefile  count_ss.c  descrip.mms  field_of.c  ss_field.c
src/string/: Makefile  descrip.mms  dftenv.c  dotcmp.c  dyn_app.c  dyn_appc.c  dyn_argv.c  dyn_cata.c  dyn_copy.c  dyn_str.c  lsbycols.c  ltostr.c  modules  strbcmp.c  strclean.c  strcount.c  strerror.c  strtrim.c  strucmp.c  strucpy.c  strwcmp.c
src/unix/: Makefile  descrip.mms  gid2s.c  s2gid.c  s2uid.c  setmtime.c  uid2s.c
support/: Makefile  gen-pkgconfig.in  ins_hdr  ins_mak  lib_top.mms  linkopts.opt  makefile.in  old-td_lib.mk  prog_top.mms  rem_hdr  selflink.sh  td_config.c  td_lib.mms  td_lib.pc.in  td_progs.mms
test/: Makefile  dummy.txt  dummy2.txt  dummy3.txt  dummy4.txt  makefile.end  makefile.in  run_test.sh  sub_vars.in  td_defns.mk  td_rules.mk
test/cm_funcs/: Makefile  cmv_dir.ref  cmv_dir.sh  cmv_last.ref  cmv_last.sh  cutoff.ref  cutoff.sh  cvslast.sh  lastrev.sh  modules  newzone.ref  newzone.sh  next_ver.sh  packdate.ref  packdate.sh  prcslast.sh  rcs_dir.sh  rcsargpr.ref  rcsargpr.sh  rcsdebug.sh  rcsedit.sh  rcskeys.sh  rcslast.sh  rcsload.ref  rcsload.sh  rcslocks.sh  rcsname.ref  rcsname.sh  rcspath.sh  rcsperm.sh  rcssymbs.sh  rcstemp.sh  rcstime.sh  samebr.ref  samebr.sh  sccs_dir.sh  sccsdbug.sh  sccslast.sh  sccsname.ref  sccsname.sh  (+6 more)
test/compare/: Makefile  btree.sh  cmpqsort.sh  diffload.ref  diffload.sh  m2comp.ref  m2comp.sh  scomp.ref  scomp.sh  test_cmp.c
test/curses/: Makefile  addchnst.sh  beep.sh  blip.sh  cmdch.sh  dumpchr.sh  dumptty.sh  dumpwin.sh  erasechr.sh  getmaxx.sh  is_xterm.sh  killchar.sh  lnextchr.sh  logch.sh  modules  on_winch.sh  padedit.sh  rawgets.ref  rawgets.sh  rawterm.sh  resizwin.sh  savewin.sh  scr_size.sh  viewfile.sh  win2file.sh  wrepaint.sh  wresize.sh
test/memory/: Makefile  doalloc.ref  doalloc.sh  memmove.sh  modules  stralloc.sh  txtalloc.ref  txtalloc.sh  vecalloc.sh  vecedit.ref  vecedit.sh  veclen.sh
test/pathname/: Makefile  abspath.ref  abspath.sh  acc_mode.sh  add2fnam.sh  arg2file.sh  copyback.sh  denode.sh  dlettree.ref  dlettree.sh  dotname.sh  editfile.ref  editfile.sh  edittree.ref  edittree.sh  file2arg.ref  file2arg.sh  file2mem.ref  file2mem.sh  filecopy.sh  filesize.sh  fleaf.sh  fleaf14.sh  fp2argv.ref  fp2argv.sh  ftype.sh  ftype2.sh  is_spath.sh  istextfl.sh  mem2file.sh  modechar.sh  modules  name2s.ref  name2s.sh  pathcat.sh  pathcmp.ref  pathcmp.sh  pathhead.ref  pathhead.sh  pathleaf.ref  (+17 more)
test/port2dos/: Makefile  run_test.sh
test/port2vms/: Makefile  README  dir2path.ref  dir2path.sh  modules  name2vms.ref  name2vms.sh  path2dir.ref  path2dir.sh  path2vms.ref  path2vms.sh  rmsio.sh  run_test.sh  time2vms.sh  uid2s.sh  utimes.sh  vms2name.ref  vms2name.sh  vms_dirs.sh  vms_pthc.ref  vms_pthc.sh  vms_rpth.ref  vms_rpth.sh  vms_wild.ref  vms_wild.sh  zone2vms.ref  zone2vms.sh
test/process/: Makefile  bldarg.sh  catarg.sh  catchall.sh  egress.sh  execute.ref  execute.sh  failed.ref  failed.sh  for_admn.sh  for_user.sh  gethome.ref  gethome.sh  getopt.sh  getuser.sh  in_group.sh  interact.sh  makeargv.ref  makeargv.sh  modules  revert.sh  savesuid.sh  shoarg.sh  showuids.sh  usercopy.sh  userprot.sh  walkback.ref  walkback.sh
test/sheet/: Makefile  count_ss.sh  field_of.sh  modules  run_test.sh  (+1 more)
(+34 files in other folders)
